--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "bent": "^7.1.0",
     "express": "^4.17.1",
     "pug": "^2.0.4"
   }
